--- a/java-lab-practice-1/auth-service/pom.xml
+++ b/java-lab-practice-1/auth-service/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>java-lab-practice-1</groupId>
     <artifactId>auth-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <parent>
         <groupId>org.springframework.cloud</groupId>
@@ -68,6 +68,10 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
