--- a/java-lab-practice-1/cat-service/pom.xml
+++ b/java-lab-practice-1/cat-service/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>java-lab-practice-1</groupId>
     <artifactId>cat-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <parent>
         <groupId>org.springframework.cloud</groupId>
@@ -45,5 +45,14 @@
             <version>2.7.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
