--- a/java-lab-practice-1/cat-service/src/main/resources/application.properties
+++ b/java-lab-practice-1/cat-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cat-service
-server.port=0
+server.port=8080
 
-eureka.client.service-url.defaultZone=http://localhost:9000/eureka
+eureka.client.service-url.defaultZone=http://eureka-service:9000/eureka
 eureka.instance.prefer-ip-address=true
 
 cat.api.url=https://api.thecatapi.com/v1/images
