--- a/java-lab-practice-1/freemarker-frontend/pom.xml
+++ b/java-lab-practice-1/freemarker-frontend/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>java-lab-practice-1</groupId>
     <artifactId>freemarker-frontend</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -39,5 +39,14 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
