--- a/java-lab-practice-1/freemarker-frontend/src/main/resources/application.properties
+++ b/java-lab-practice-1/freemarker-frontend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.freemarker.cache=false
 spring.freemarker.charset=UTF-8
 
-spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
