--- a/java-lab-practice-1/zuul-api-gateway/src/main/resources/application.yml
+++ b/java-lab-practice-1/zuul-api-gateway/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:9000/eureka
+      defaultZone: http://eureka-service:9000/eureka
   instance:
     prefer-ip-address: true
 
